@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3199 utf-8
+personal_ws-1.1 en 3200 utf-8
 AAC
 AAS
 ABI
@@ -2845,6 +2845,7 @@ strerror
 strftime
 stringify
 strlen
+strncpy
 strnlen
 strptime
 struct
