@@ -98,6 +98,10 @@ https://github.com/networkupstools/nut/milestone/11
      (similar to `runtimecal` in some other drivers, may be refactored
      to that configuration and logic model in later NUT releases)
 
+ - apcsmart updates:
+   * Revised code to use `strncpy()` and avoid potential overflows that are
+     possible with `strcpy()` used before. [PR #2564]
+
  - added Visench C1K (using serial port converter with USB ID `1a86:7523`)
    as known supported by `nutdrv_qx` (Megatec protocol) since at least
    NUT v2.7.4 release [#2395]
